fix missing padding/margin when zooming out far

--- a/themes/elsi-theme/assets/scss/_header.scss
+++ b/themes/elsi-theme/assets/scss/_header.scss
@@ -42,4 +42,10 @@
 
     max-width: 1280px;
     margin: 0 auto;
+
+    @media (min-width: 1280px) {
+        .header-inner {
+            padding: 0 32px;
+        }
+    }
 }
