--- a/themes/elsi-theme/assets/scss/publications/_banner.scss
+++ b/themes/elsi-theme/assets/scss/publications/_banner.scss
@@ -1,15 +1,20 @@
 .publications-banner {
     padding: 64px 32px;
     background-image: linear-gradient(to right bottom, $calm-blue 0%, $calm-blue-purple 100%);
-    
-    h1 {
-        color: white;
-        font-size: 48px;
-        margin-bottom: 16px;
-    }
 
-    p {
-        color: $light-gray;
-        font-size: 20px;
+    .text-container {
+        max-width: 1280px;
+        margin: 0 auto;
+
+        h1 {
+            color: white;
+            font-size: 48px;
+            margin-bottom: 16px;
+        }
+
+        p {
+            color: $light-gray;
+            font-size: 20px;
+        }
     }
 }
