--- a/themes/elsi-theme/assets/scss/publications/_publications.scss
+++ b/themes/elsi-theme/assets/scss/publications/_publications.scss
@@ -1,5 +1,7 @@
 .publications-body {
     padding: 64px 32px;
+    max-width: 1280px;
+    margin: 0 auto;
 
     .header-container {
         display: flex;
